--- a/templates/old_index.html
+++ b/templates/old_index.html
@@ -3,7 +3,7 @@
 <head>
 	<!--<meta charset="UTF-8" http-equiv="refresh" content="5">-->
 
-	<title>Highcharts MyDemo 5/17 11:29 </title>
+	<title>Highcharts</title>
 	<!-- jQuery js -->	
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	
@@ -16,8 +16,6 @@
 
 	<script src= "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" ></script>
 
-    
-   
 	<script>
 	function highcharsinit(){
 		$('#container').highcharts({
@@ -67,7 +65,7 @@
 
 	$(function () {
 		$.ajax({									  
-			url: '/getPredict',//連接的URL	  
+			url: 'GetData.php',//連接的URL	  
 			data: "{}",//夾帶的參數
 			dataType: 'json', //資料格式 
 			success: function(data)	//傳送成功的function
@@ -103,25 +101,15 @@
 	<div class="container">
 		<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto">Insert Highchart Here</div>
 		
-		
-		<button class = "btn btn-warning " id = "bSetRandom">SetRandom</button>
-		<button class = "btn btn-dangerous"id = "bCallAI">Call AI</button> 
+		<button class = "btn btn-warning " id = "GetData">GetData</button>
 		<!--
 		<button class = "btn btn-dangerous"id = "trigger">Trigger EA</button> 
 		<button class = "btn btn-info"id = "trigger">Trigger NB</button> 
 		<button class = "btn btn-link"id = "Random">Random</button>
 		-->
+		
+		
 	</div>
-
-
-<script>
-    $('#bSetRandom').click(function(){
-      window.location.href='/noAI';
-    });
-     $('#bCallAI').click(function(){
-      window.location.href='/';
-    });
-    </script>
 	
 </body>
 </html>
